--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
           <p class="position">"Front-end developer and avid reader."</p>
           <div class="social-links">
             <p class="social">GitHub</p>
-            <p class="social">Frontend</p>
-            <p class="social">Mentor</p>
+            <p class="social">Frontend Mentor</p>
             <p class="social">LinkedIn</p>
             <p class="social">Twitter</p>
             <p class="social">Instagram</p>
